syntax = "proto3";
package testspace;

option cc_generic_services = true;

// 错误类型
message ResultCode{
    int32 errcode = 1;
    bytes errmsg = 2;
}

// 定义登录请求消息类型
message LoginRequest{
    bytes name = 1;
    bytes pwd = 2;
}

// 定义登录响应消息类型
message LoginResponse{
    ResultCode result = 1;
    bool success = 2;
}

// 好友类型
message User{
    bytes name = 1;
    uint32 age = 2;
    enum Sex{        // 定义枚举
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

// 定义获取好友列表请求消息类型
message GetFriendListRequest{
    uint32 userid = 1;
}

// 定义获取好友列表回复消息类型
message GetFriendListResponse{
    ResultCode result = 1;
    repeated User friend_list = 2;  // 列表类型
}

// 定义描述rpc方法的类型 -- service服务类
service UserServiceRpc{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendList(GetFriendListRequest) returns(GetFriendListResponse);
}

